<resources>
    <string name="app_name">Time2Travel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_where_do_you_want_to_go_today">Welcome back, where do you want to go today?</string>
    <string name="hi_omar">Hi Omar !</string>
    <string name="business">Business</string>
    <string name="flight">Flight</string>
    <string name="hotles">Hotles</string>
    <string name="homestay">HomeStay</string>
    <string name="car_rental">Car Rental</string>
    <string name="featured">Featured</string>
    <string name="top_hotels">Top Hotels</string>
    <string name="top_cities">Top Cities</string>
    <string name="find">Find</string>

    <string name="one_way">One Way</string>

    <string name="round_trip">Round Trip</string>

    <string name="multi_city">multi-city</string>

    <string name="trip_class">Class</string>

    <string name="from">From</string>

    <string name="dubai">  Dubai (DBX)</string>

    <string name="mumbai_bom">  Mumbai (BOM)</string>
    <string name="to">to</string>
    <string name="departure">Departure</string>
    <string name="back">return</string>
    <string name="passenger">Passenger</string>
    <string name="where_are_you_going">Where are you going ?</string>
    <string name="check_in">Check in</string>
    <string name="check_out">check out</string>
    <string name="guests">Guests</string>
    <string name="pickup">Pickup</string>
    <string name="drop_off">Drop-off</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_saved">Your Saved</string>
    <string name="select_an_item_to_view_and_book">Select an item to view and book</string>
    <string name="settings">Settings</string>
    <string name="view">View</string>
    <string name="change_your_personal_info_payment_security_and_other_settings">Change your personal info, payment, security, and other settings.</string>
    <string name="wallet_amp_payment"><![CDATA[Wallet & Payment]]></string>
    <string name="security">Security</string>
    <string name="preferences">Preferences</string>
    <string name="personal_details">Personal details</string>
    <string name="email_notifications">Email notifications</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hello_again">Hello Again!</string>
    <string name="are_you_ready_for_your_next_travel_xa_please_enter_your_login_details_below">Are you ready for your next travel? \nPlease enter your login details below</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="or_you_can_login_with_one_of_your_accounts">or you can login with one of your accounts</string>
    <string name="by_getting_started_you_acknowledge_and_agree_to_terms_of_use_and_privacy_policy">By getting started, you acknowledge and agree to Terms of Use and Privacy Policy</string>
    <string name="register_a_new_account">Register a new Account</string>
    <string name="create_account_to_start_your_first_plan_with_time2travel">Create account to start your first plan with Time2Travel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="success">Success!</string>
    <string name="congratulations_your_time2travel_account_has_been_created">Congratulations, your Time2Travel account has been created!</string>
    <string name="you_can_now_start_planning_your_journey">You can Now start planning your journey!</string>
    <string name="success_continue">Continue</string>
    <string name="title_activity_success_register">SuccessRegisterActivity</string>
    <string name="bookings">Bookings</string>
    <string name="saved">Saved</string>
    <string name="flight_details">Flight details</string>
    <string name="included_baggage">Included baggage</string>
    <string name="the_total_baggage_included_in_the_price">The total baggage included in the price</string>
    <string name="included">Included</string>
    <string name="rewards">Rewards</string>
    <string name="price">Price</string>
    <string name="select">Select</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="standard_ticket">Standard Ticket</string>
    <string name="flexible_ticket">Flexible Ticket</string>
    <string name="flexible_tickets_are_only_available_when_you_book_your_flight_see_section_7_for_terms_and_conditions">Flexible tickets are only available when you book your flight. See section 7 for <font color='#449CE1'>terms and conditions.</font> </string>
    <string name="back_ticket">Back</string>
    <string name="who_s_flying">Who\'s flying?</string>
    <string name="required"><font color='#449CE1'>*</font> Required</string>
    <string name="contact_details">Contact details</string>
    <string name="contact_email">Contact email <font color='#449CE1'>*</font></string>
    <string name="contact_number">Contact number <font color='#449CE1'>*</font></string>
    <string name="get_free_text_message_updates_about_your_flight">Get free text message updates about your flight</string>
    <string name="we_ll_send_your_flight_confirmation_here">We\'ll send your flight confirmation here</string>
    <string name="first_name_flying">First Name<font color='#449CE1'> *</font></string>
    <string name="last_name_flying">Last Name <font color='#449CE1'> *</font></string>
    <string name="gender_specified_on_your_travel_document">Gender specified on your travel document<font color='#449CE1'> *</font></string>
    <string name="enter_exactly_what_s_written_on_this_traveler_s_travel_document">Enter exactly what\'s written on this traveler\'s travel document</string>
    <string name="flying_select">dropDownMenuExample</string>
    <string name="we_re_currently_required_by_airlines_and_providers_to_ask_for_this_information">We\'re currently required by airlines and providers to ask for this information</string>
    <string name="check_and_pay">Check and pay</string>
    <string name="flexibility_and_protection">Flexibility and protection</string>
    <string name="by_clicking_34_pay_now_34_you_agree_with_the_terms_and_conditions_and_privacy_policies_of_booking_com_gotogate_flights_ltd_gulf_air_and_with_the_fare_rules">By clicking \" pay now \" you agree with <font color='#449CE1'><u>the terms and conditions and privacy policies</u></font>of Booking.com, Gotogate Flights Ltd, Gulf Air, and with the<font color='#449CE1'>  <u>fare rules.</u></font></string>
    <string name="adjust_your_security_settings_and_set_up_two_factor_authentication">Adjust your security settings and set up two-factor authentication.</string>
    <string name="reset_your_password_regularly_to_keep_your_account_secure">Reset your password regularly to keep your account secure</string>
    <string name="reset">Reset</string>
    <string name="sign_out">Sign out</string>
    <string name="selecting_34_sign_out_34_will_sign_you_out_from_all_devices_except_this_one_this_can_take_up_to_10_minutes">Selecting \"Sign out \" will sign you out from all devices except this one. This can take up to 10 minutes.</string>
    <string name="delete_account">Delete account</string>
    <string name="permanently_delete_your_time2travel_account">Permanently delete your Time2Travel account</string>
    <string name="decide_what_you_want_to_be_notified_about_and_unsubscribe_from_what_you_don_t">Decide what you want to be notified about, and unsubscribe from what you don\'t.</string>
    <string name="update_your_info_and_find_out_how_it_s_used">Update your info and find out how it\'s used.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="direct">Direct</string>
    <string name="stops">Stops</string>
    <string name="outbound">Outbound</string>
    <string name="departure_times">Departure Times</string>
    <string name="_1_stop">1 Stop</string>
    <string name="_2_stops">2+ Stops</string>
    <string name="range">Range</string>
    <string name="duration">Duration</string>
    <string name="maximum_travel_time">Maximum travel time</string>
    <string name="apply">Apply</string>
    <string name="show_all"><u>Show all</u></string>
    <string name="we_have_sent_you_a_verification_code_to_your_email">We have sent you a verification code to your email:</string>
    <string name="please_input_the_6_digit_code_below_to_continue">Please input the 6-digit code below to continue</string>
    <string name="didn_t_get_code_yet">Didn\'t get code yet?</string>
    <string name="verify">Verify</string>
    <string-array name="gender">
        <item>select</item>
        <item>male</item>
        <item>female</item>

    </string-array>

</resources>