<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20"
        tools:context=".registration.SuccessRegisterFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:id="@+id/tv_success_title"
            android:layout_gravity="center"
            android:text="@string/success"
            android:textSize="@dimen/_22sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/app_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/tv_success_sub_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/congratulations_your_time2travel_account_has_been_created"
            android:textSize="@dimen/_12sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/app_color"
            android:layout_marginTop="@dimen/_15sdp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:id="@+id/img_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/you_can_now_start_planning_your_journey"
            android:layout_gravity="center"
            android:textColor="@color/app_color"
            android:fontFamily="@font/ubuntu"
            android:textSize="@dimen/_10sdp" />





        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/et_register_repeat_password"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/btn_third_color_layout"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/success_continue"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>