<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f4f4f4"
        android:orientation="vertical"
        android:elevation="@dimen/_3sdp"
        tools:context=".registration.LoginFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/hello_again"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_22sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/are_you_ready_for_your_next_travel_xa_please_enter_your_login_details_below"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_9sdp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edit_text_layout"
            android:elevation="@dimen/_3sdp"
            android:hint="@string/enter_your_email_here"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_9sdp"
            android:fontFamily="@font/ubuntu_light_italic"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_register_password"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edit_text_layout"
            android:elevation="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_15sdp"
            android:weightSum="5"
            app:layout_constraintTop_toBottomOf="@id/linear_phone_number">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/ubuntu_light_italic"
                android:hint="@string/enter_your_password_here"
                android:textSize="@dimen/_10sdp"
                android:background="@null"


                />

            <ImageView
                android:id="@+id/img_hide_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/hide_password_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/app_second_color_light"
            android:textSize="@dimen/_8sdp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"

            android:background="@drawable/btn_third_color_layout"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/or_you_can_login_with_one_of_your_accounts"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_9sdp"


            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_apple"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_30sdp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/apple_icon"


                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_gmail"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_30sdp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/gmail_icon"


                    />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_facebook"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_30sdp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook_icon"


                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_getting_started_you_acknowledge_and_agree_to_terms_of_use_and_privacy_policy"
            android:fontFamily="@font/ubuntu_light_italic"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:textColor="@color/app_second_color_light"
            android:textSize="@dimen/_7sdp"
            android:gravity="center" />
    </LinearLayout>
</layout>